# EasyAptos

./: .gitignore  README.md  README_RU.md  main.py  pyproject.toml  requirements.txt  wallets_template.csv
config/: app_config.py  user_config.py
exceptions/: transfer.py
modules/: balance_checker.py  transfer.py  wallet_creator.py
utils/: banner_animation.py  spreadsheet_utils.py
